--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import data\n",
     "from models import Transformer\n",
-    "from trainer import Trainer\n",
+    "from a_redundant.trainer import Trainer\n",
     "import matplotlib.pyplot as plt"
    ]
   },
